--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       name="description"
       content="Desarrollador Web enfocado en el Frontend y diseño UI/UX"
     />
+    <meta name="robots" content="index,nofollow" />
+    <meta name="author" content="Eduardo maximiliano" />
+    <link rel="canonical" href="https://maximo-4ever.github.io/" />
     <title>Portafolio Web - Eduardo Maximiliano Desarrollador Frontend</title>
     <link rel="icon" href="Archivos/Logo.png" />
     <link rel="stylesheet" href="normalize.css" />
@@ -17,9 +20,288 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/c622ee6a95.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
- <body> <nav class="nav"> <a href="#home"><img src="./Archivos/Logo.png" alt="logo de un rayo" class="nav__logo" /></a> <ul class="nav__menu"> <li class="nav__menu__li"> <a class="nav__menu__a" href="#home">Inicio</a> </li> <li class="nav__menu__li"> <a class="nav__menu__a" href="#services">Servicios</a> </li> <li class="nav__menu__li"> <a class="nav__menu__a" href="#projects">Proyectos</a> </li> <li class="nav__menu__li"> <a class="nav__menu__a" href="#contact">Contacto</a> </li> </ul> <div class="btn-responsive"> <div class="line"></div> <div class="line"></div> <div class="line"></div> </div> </nav> <header class="home" id="home"> <section class="stars"> <span></span> <span></span> <span></span> <span></span> <span></span> </section> <div class="home__text"> <h2 class="home__title h2">HOLA MI NOMBRE ES</h2> <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1> <h2 class="home__title h3">FRONTEND DEVELOPER</h2> <p class="home__paragraph"> Soy un Desarrollador Web Freelancer especializado hacia el Frontend y el Diseño con las tecnologías dominantes HTML, CSS y JavaScript. No dudes en contactarme. </p> <div class="social"> <a target="_blank" href="https://www.linkedin.com/in/eduardo-maximiliano-cedomio-marin-90432921a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BB%2FFsU%2BnjQUuv0ODgrhg2dA%3D%3D" ><i class="fab fa-linkedin-in"></i> </a> <a target="_blank" href="https://www.instagram.com/Maximo4ever/" ><i class="fab fa-instagram"></i ></a> <a target="_blank" href="https://twitter.com/Maximo_4ever" ><i class="fab fa-twitter"></i ></a> </div> </div> <div class="home__container-img"> <img class="home__container-img__img" src="./Archivos/Coding_SVG.svg" alt="Imagen ilustrativa codeando" /> </div> </header> <div class="services" id="services"> <h2 class="titles">Servicios</h2> <div class="services__container-divs"> <div class="services__information"> <i class="fas fa-desktop"></i> <h3 class="services__information__title">Desarrollo Frontend</h3> <p class="services__information__paragraph"> Creación de aplicaciones web dinámicas responsivas del lado del cliente con HTML, CSS, y JavaScript. </p> </div> <div class="services__information"> <i class="fas fa-pencil-ruler"></i> <h3 class="services__information__title">Diseño UX / UI</h3> <p class="services__information__paragraph"> Creo una aplicación web con un buen diseño y experiencia de usuario que tengas en mente. </p> </div> <div class="services__information"> <i class="fas fa-layer-group"></i> <h3 class="services__information__title">Mantenimiento Web</h3> <p class="services__information__paragraph"> Le doy mantenimiento a tu web y la renovación con un buen Hosting cuando lo necesites. </p> </div> </div> </div> <main class="projects" id="projects"> <h2 class="titles">Proyectos</h2> <div class="projects__grid"> <article class="projects__card"> <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank"> <img class="projects__img" src="./Archivos/fylo-dark.jpg" alt="Proyecto Fylo Dark Theme" loading="lazy" /> </a> <h3 class="projects__card__title">Fylo dark theme</h3> <a class="projects__card__btn" target="_blank" href="https://elastic-spence-6ab64a.netlify.app" >Ver más</a > </article> <article class="projects__card"> <a href="https://lucid-mccarthy-9e5cc6.netlify.app" target="_blank"> <img class="projects__img" src="./Archivos/splitter.jpg" alt="Proyecto Splitter" loading="lazy" /> </a> <h3 class="projects__card__title">Tip calculator</h3> <a class="projects__card__btn" target="_blank" href="https://lucid-mccarthy-9e5cc6.netlify.app" >Ver más</a > </article>  <article class="projects__card"> <a href="https://friendly-galileo-025863.netlify.app" target="_blank"> <img class="projects__img" src="./Archivos/temporizador.jpg" alt="Proyecto Countdown Timer" loading="lazy" /> </a> <h3 class="projects__card__title">Countdown timer</h3> <a class="projects__card__btn" target="_blank" href="https://friendly-galileo-025863.netlify.app" >Ver más</a > </article><article class="projects__card"> <a href="https://elated-banach-060921.netlify.app" target="_blank"> <img class="projects__img" src="./Archivos/charizard.png" alt="Proyecto Random Pokemon" loading="lazy" /> </a> <h3 class="projects__card__title">Random pokemon</h3> <a class="projects__card__btn" target="_blank" href="https://elated-banach-060921.netlify.app" >Ver más</a ></article></div></main> <footer class="contact" id="contact"> <h2 class="titles">Contactame</h2> <form class="contact__form"> <label class="contact__form__title">¿Tienes alguna página en mente? Envíame un email y nos ponemos en contacto 🧑‍💻</label> <input name="name" id="name" class="contact__input" type="text" placeholder="Nombre" required /> <input name="email" id="email" class="contact__input" type="email" placeholder="Correo Electronico" required /> <textarea name="message" id="message" class="contact__input msg" type="text" placeholder="Mensaje" required maxlength="255" ></textarea> <button type="submit" class="projects__card__btn contact__send" required > Enviar </button> </form> <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a> </footer> <script src="scripts.js"></script> </body></html>
+
+  <body>
+    <nav class="nav">
+      <a href="#home"
+        ><img src="./Archivos/Logo.png" alt="logo de un rayo" class="nav__logo"
+      /></a>
+      <ul class="nav__menu">
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#home">Inicio</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#services">Servicios</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#projects">Proyectos</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#contact">Contacto</a>
+        </li>
+      </ul>
+      <div class="btn-responsive">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+    </nav>
+    <header class="home" id="home">
+      <section class="stars">
+        <span></span> <span></span> <span></span> <span></span> <span></span>
+      </section>
+      <div class="home__text">
+        <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
+        <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
+        <h2 class="home__title h3">FRONTEND DEVELOPER</h2>
+        <p class="home__paragraph">
+          Soy un Desarrollador Web Freelancer especializado hacia el Frontend y
+          el Diseño con las tecnologías dominantes HTML, CSS y JavaScript. No
+          dudes en contactarme.
+        </p>
+        <!-- <a class="projects__card__btn" href="#">Download CV</a> -->
+        <div class="social">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/eduardo-maximiliano-cedomio-marin-90432921a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BB%2FFsU%2BnjQUuv0ODgrhg2dA%3D%3D"
+            ><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
+          </a>
+          <a target="_blank" href="https://www.instagram.com/Maximo4ever/"
+            ><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg></a>
+          <a target="_blank" href="https://twitter.com/Maximo_4ever"
+            ><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" class="svg-inline--fa fa-twitter fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg></a>
+        </div>
+      </div>
+      <div class="home__container-img">
+        <img
+          class="home__container-img__img"
+          src="./Archivos/Coding_SVG.svg"
+          alt="Imagen ilustrativa codeando"
+        />
+      </div>
+    </header>
+    <div class="services" id="services">
+      <h2 class="titles">Servicios</h2>
+      <div class="services__container-divs">
+        <div class="services__information">
+          <img
+            class="services__information__img"
+            src="./Archivos/app_development_SVG.svg"
+            alt="Imagen isometrica Frontend"
+          />
+          <h3 class="services__information__title">Desarrollo Frontend</h3>
+          <p class="services__information__paragraph">
+            Creación de aplicaciones web dinámicas responsivas del lado del
+            cliente con HTML, CSS, y JavaScript.
+          </p>
+        </div>
+        <div class="services__information">
+          <img
+            class="services__information__img"
+            src="./Archivos/Web_design_SVG.svg"
+            alt="Imagen isometrica Frontend"
+          />
+          <h3 class="services__information__title">Diseño UX / UI</h3>
+          <p class="services__information__paragraph">
+            Creo una aplicación web con un buen diseño y experiencia de usuario
+            que tengas en mente.
+          </p>
+        </div>
+        <div class="services__information">
+          <img
+            class="services__information__img"
+            src="./Archivos/Startup_SVG.svg"
+            alt="Imagen isometrica Frontend"
+          />
+          <h3 class="services__information__title">Mantenimiento Web</h3>
+          <p class="services__information__paragraph">
+            Le doy mantenimiento a tu web y la renovación con un buen Hosting
+            cuando lo necesites.
+          </p>
+        </div>
+      </div>
+    </div>
+    <main class="projects" id="projects">
+      <h2 class="titles">Proyectos</h2>
+      <div class="projects__grid">
+        <article class="projects__card">
+          <a href="https://hungry-neumann-69f37d.netlify.app/" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/shortly.jpg"
+              alt="Proyecto Shortly"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Url Shortering</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://elated-banach-060921.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/temporizador.jpg"
+              alt="Proyecto Countdown Timer"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Countdown timer</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://friendly-galileo-025863.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://lucid-mccarthy-9e5cc6.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/splitter.jpg"
+              alt="Proyecto Splitter"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Tip calculator</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://lucid-mccarthy-9e5cc6.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/fylo-dark.jpg"
+              alt="Proyecto Fylo Dark Theme"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Fylo dark theme</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://elastic-spence-6ab64a.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/charizard.png"
+              alt="Proyecto Random Pokemon"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Random pokemon</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://elastic-spence-6ab64a.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/charizard.png"
+              alt="Proyecto Random Pokemon"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Random pokemon</h3>
+            <p class="projects__card__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero,
+              architecto!
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://elastic-spence-6ab64a.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+      </div>
+    </main>
+    <footer class="contact" id="contact">
+      <h2 class="titles">Contactame</h2>
+      <form class="contact__form">
+        <label class="contact__form__title"
+          >¿Tienes alguna página en mente? Envíame un email y nos ponemos en
+          contacto 🧑‍💻</label
+        >
+        <input
+          name="name"
+          id="name"
+          class="contact__input"
+          type="text"
+          placeholder="Nombre"
+          required
+        />
+        <input
+          name="email"
+          id="email"
+          class="contact__input"
+          type="email"
+          placeholder="Correo Electronico"
+          required
+        />
+        <textarea
+          name="message"
+          id="message"
+          class="contact__input msg"
+          type="text"
+          placeholder="Mensaje"
+          required
+          maxlength="255"
+        ></textarea>
+        <button
+          type="submit"
+          class="projects__card__btn contact__send"
+          required
+        >
+          Enviar
+        </button>
+      </form>
+      <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
+    </footer>
+    <script src="scripts.js"></script>
+  </body>
+</html>
